Amended social links

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/5bf6c208a2.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="index.css"/ >
     <title>Shajmin Rahman Website</title>
   </head>
