Added styling to Fashion page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <a href="mailto:shajrahman@outlook.com"
           ><i class="fa-solid fa-envelope" title="Email Shajmin"></i
         ></a>
-        <a href="https//www.linkedin.com/in/shajmin-rahman" target="_blank"
+        <a href="https://www.linkedin.com/in/shajmin-rahman" target="_blank"
           ><i class="fa-brands fa-linkedin" title="LinkedIn Profile"></i
         ></a>
         <a href="https://github.com/shajmin306" target="_blank"
