--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/5bf6c208a2.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="index.css"/ >
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-grey">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="index.html">Shajmin Rahman</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a
+              class="nav-link text-white active"
+              aria-current="page"
+              href="index.html"
+              title="Homepage"
+              >Home</a
+            >
+
+            <a
+              class="nav-link text-white"
+              href="./fashion.html"
+              title="Fashion Designs"
+              >Fashion Design</a
+            >
+            <a
+              class="nav-link text-white"
+              href="./web.html"
+              title="Web Projects"
+              >Web Design</a
+            >
+            <a
+              class="nav-link text-white"
+              href="./contact.html"
+              title="Contact Page"
+              >Contact</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
+  </body>
+  <footer>
+    <p class="mb-3">Contact Me</p>
+    <div class="social-links d-flex justify-content-center mb-3">
+      <a href="mailto:shajrahman@outlook.com"
+        ><i class="fa-solid fa-envelope" title="Email Shajmin"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/shajmin-rahman" target="_blank"
+        ><i class="fa-brands fa-linkedin" title="LinkedIn Profile"></i
+      ></a>
+      <a href="https://github.com/shajmin306" target="_blank"
+        ><i class="fa-brands fa-square-github" title="Github Profile"></i
+      ></a>
+    </div>
+    This website was coded by
+    <a href="https://github.com/shajmin306" target="_blank">Shajmin Rahman</a>
+    and is open-sourced on
+    <a href="https://github.com/shajmin306/Website-Portfolio" target="_blank"
+      >Github</a
+    >
+  </footer>
 </html>
