Added content to Web page

--- a/web.html
+++ b/web.html
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/5bf6c208a2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="index.css"/ >
+    <link rel="stylesheet" href="web.css"/ >
     <title>Document</title>
   </head>
   <body>
@@ -74,6 +74,75 @@
         </div>
       </div>
     </nav>
+    <h1>Web Projects</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 d-none d-md-block">
+          <img
+            src="images/weather.png"
+            alt="weather"
+            class="img-fluid rounded"
+            title="Weather-App Preview"
+          />
+        </div>
+        <div class="col-md-6">
+          <h3 class="text-center mt-3">Weather Project</h3>
+          <p class="text-center">Built with HTML, CSS and Javascript</p>
+          <p class="text-center">
+            This project is open sourced on
+            <a
+              href="https://github.com/shajmin306/Shaz-Weather-Project"
+              target="_blank"
+              >Github</a
+            >
+          </p>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <h3 class="text-center mt-3">Poem Generator Project</h3>
+          <p class="text-center">Built with HTML, CSS, Javascript and AI</p>
+          <p class="text-center">
+            This project is open sourced on
+            <a
+              href="https://github.com/shajmin306/Shaz-Poem-Generator"
+              target="_blank"
+              >Github</a
+            >
+          </p>
+        </div>
+        <div class="col-md-6 d-none d-md-block">
+          <img
+            src="images/poem.png"
+            alt="poem"
+            class="img-fluid rounded"
+            title="Poem-App Preview"
+          />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6 d-none d-md-block">
+          <img
+            src="images/clock.png"
+            alt="clock"
+            class="img-fluid rounded"
+            title="Clock-App Preview"
+          />
+        </div>
+        <div class="col-md-6">
+          <h3 class="text-center mt-3">World Clock Project</h3>
+          <p class="text-center">Built with HTML, CSS and Javascript</p>
+          <p class="text-center">
+            This project is open sourced on
+            <a
+              href="https://github.com/shajmin306/shaz-world-clock"
+              target="_blank"
+              >Github</a
+            >
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
   <footer>
     <p class="mb-3">Contact Me</p>
