Added content to Contact page

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,19 @@
         </div>
       </div>
     </nav>
+    <div class="content">
+      <h1>Contact Me</h1>
+      <h3>Email:</h3>
+      <p class="text-center">
+        <a href="mailto:shajrahman@outlook.com">shajrahman@outlook.com</a>
+      </p>
+      <h3>LinkedIn:</h3>
+      <p class="text-center">
+        <a href="https//www.linkedin.com/in/shajmin-rahman" target="_blank"
+          >Shajmin Rahman</a
+        >
+      </p>
+    </div>
   </body>
   <footer>
     <p class="mb-3">Contact Me</p>
