Added header image to Index page

--- a/index.html
+++ b/index.html
@@ -80,63 +80,70 @@
         <p class="mb-4">Front-end developer based in Manchester, UK</p>
         <a href="./contact.html" class="learn-more mb-4">Contact Me </a>
       </div>
-      <p class="mt-4 mb-5">Have a look at my work 👇🏾</p>
     </header>
-    <main>
-      <div class="container">
-        <h3>Fashion Design</h3>
-        <p>
-          I have worked in the fashion industry for nearly 10 years. Initially
-          as a junior designer, before moving into Merchandising, I have
-          combined my experience to transition into a successful role as a
-          Product Developer
+    <div class="container">
+      <main>
+        <div class="main-content">
+          <h3>Fashion Design</h3>
+          <p>
+            I have worked in the fashion industry for nearly 10 years. Initially
+            as a junior designer, before moving into Merchandising, I have
+            combined my experience to transition into a successful role as a
+            Product Developer
+            <br />
+            <em
+              >Check out some of the product I have developed over the years</em
+            >
+          </p>
+          <a href="./fashion.html" class="learn-more">Learn More</a>
           <br />
-          <em>Check out some of the product I have developed over the years</em>
-        </p>
-        <a href="./fashion.html" class="learn-more">Learn More</a>
-        <br />
-        <img
-          src="IMAGES/PY 4.png"
-          alt="Fashion Range Preview"
-          class="img-fluid mt-3 mb-5 main-image"
-        />
+          <img
+            src="IMAGES/PY 1.png"
+            alt="Fashion Range Preview"
+            class="img-fluid mt-3 mb-5 main-image"
+          />
 
-        <h3>Web Design</h3>
-        <p>
-          I have decided to pursue web development as I see this as an
-          opportunity to learn new skills, increase my potential as a designer
-          and the endless applications of this industry fascinates me
+          <h3>Web Design</h3>
+          <p>
+            I have decided to pursue web development as I see this as an
+            opportunity to learn new skills, increase my potential as a designer
+            and the endless applications of this industry fascinates me
+            <br />
+            <em>Have a look at some projects I have worked on</em>
+          </p>
+          <a href="./web.html" class="learn-more">Learn More</a>
           <br />
-          <em>Have a look at some projects I have worked on</em>
-        </p>
-        <a href="./web.html" class="learn-more">Learn More</a>
-        <br />
-        <img
-          src="IMAGES/weather.png"
-          alt="Web Projects Preview"
-          class="img-fluid mt-3 mb-5 main-image"
-        />
-      </div>
-    </main>
-    <footer>
-      <p class="mb-3">Contact Me</p>
-      <div class="social-links d-flex justify-content-center mb-3">
-        <a href="mailto:shajrahman@outlook.com"
-          ><i class="fa-solid fa-envelope" title="Email Shajmin"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/shajmin-rahman" target="_blank"
-          ><i class="fa-brands fa-linkedin" title="LinkedIn Profile"></i
-        ></a>
+          <img
+            src="IMAGES/weather.png"
+            alt="Web Projects Preview"
+            class="img-fluid mt-3 mb-5 main-image"
+          />
+        </div>
+      </main>
+      <footer>
+        <p class="mb-3">Contact Me</p>
+        <div class="social-links d-flex justify-content-center mb-3">
+          <a href="mailto:shajrahman@outlook.com"
+            ><i class="fa-solid fa-envelope" title="Email Shajmin"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/shajmin-rahman" target="_blank"
+            ><i class="fa-brands fa-linkedin" title="LinkedIn Profile"></i
+          ></a>
+          <a href="https://github.com/shajmin306" target="_blank"
+            ><i class="fa-brands fa-square-github" title="Github Profile"></i
+          ></a>
+        </div>
+        This website was coded by
         <a href="https://github.com/shajmin306" target="_blank"
-          ><i class="fa-brands fa-square-github" title="Github Profile"></i
-        ></a>
-      </div>
-      This website was coded by
-      <a href="https://github.com/shajmin306" target="_blank">Shajmin Rahman</a>
-      and is open-sourced on
-      <a href="https://github.com/shajmin306/Website-Portfolio" target="_blank"
-        >Github</a
-      >
-    </footer>
+          >Shajmin Rahman</a
+        >
+        and is open-sourced on
+        <a
+          href="https://github.com/shajmin306/Website-Portfolio"
+          target="_blank"
+          >Github</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
