Updated styling of the index page

--- a/index.html
+++ b/index.html
@@ -77,73 +77,50 @@
     <header>
       <div class="hero">
         <h1>Shajmin Rahman</h1>
-        <p class="mb-4">Front-end developer based in Manchester, UK</p>
-        <a href="./contact.html" class="learn-more mb-4">Contact Me </a>
+        <p class="mb-4">
+          Ladieswear Product Developer & Front-end developer based in
+          Manchester, UK
+        </p>
+        <a href="./contact.html" class="contact-button mb-4">Contact Me </a>
       </div>
     </header>
-    <div class="container">
-      <main>
-        <div class="main-content">
-          <h3>Fashion Design</h3>
-          <p>
-            I have worked in the fashion industry for nearly 10 years. Initially
-            as a junior designer, before moving into Merchandising, I have
-            combined my experience to transition into a successful role as a
-            Product Developer
-            <br />
-            <em
-              >Check out some of the product I have developed over the years</em
-            >
-          </p>
-          <a href="./fashion.html" class="learn-more">Learn More</a>
-          <br />
-          <img
-            src="IMAGES/PY 1.png"
-            alt="Fashion Range Preview"
-            class="img-fluid mt-3 mb-5 main-image"
-          />
-
-          <h3>Web Design</h3>
-          <p>
-            I have decided to pursue web development as I see this as an
-            opportunity to learn new skills, increase my potential as a designer
-            and the endless applications of this industry fascinates me
-            <br />
-            <em>Have a look at some projects I have worked on</em>
-          </p>
-          <a href="./web.html" class="learn-more">Learn More</a>
-          <br />
-          <img
-            src="IMAGES/weather.png"
-            alt="Web Projects Preview"
-            class="img-fluid mt-3 mb-5 main-image"
-          />
+    <main>
+      <div class="main-content">
+        <div class="row">
+          <div class="col-6">
+            <p>
+              I have nearly 10 years of experience in the fashion industry. I
+              have a background in Ladieswear design, as well as Merchandising,
+              which has allowed me to transition into a career as a sueccessful
+              Ladieswear Product Developer. Check out some of the ranges I have
+              worked on in the past 👉🏾
+            </p>
+          </div>
+          <div class="col-6">
+            <a href="./fashion.html" class="learn-more">Learn More</a>
+          </div>
         </div>
-      </main>
-      <footer>
-        <p class="mb-3">Contact Me</p>
-        <div class="social-links d-flex justify-content-center mb-3">
-          <a href="mailto:shajrahman@outlook.com"
-            ><i class="fa-solid fa-envelope" title="Email Shajmin"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/shajmin-rahman" target="_blank"
-            ><i class="fa-brands fa-linkedin" title="LinkedIn Profile"></i
-          ></a>
-          <a href="https://github.com/shajmin306" target="_blank"
-            ><i class="fa-brands fa-square-github" title="Github Profile"></i
-          ></a>
-        </div>
-        This website was coded by
+      </div>
+    </main>
+    <footer>
+      <p class="mb-3">Contact Me</p>
+      <div class="social-links d-flex justify-content-center mb-3">
+        <a href="mailto:shajrahman@outlook.com"
+          ><i class="fa-solid fa-envelope" title="Email Shajmin"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/shajmin-rahman" target="_blank"
+          ><i class="fa-brands fa-linkedin" title="LinkedIn Profile"></i
+        ></a>
         <a href="https://github.com/shajmin306" target="_blank"
-          >Shajmin Rahman</a
-        >
-        and is open-sourced on
-        <a
-          href="https://github.com/shajmin306/Website-Portfolio"
-          target="_blank"
-          >Github</a
-        >
-      </footer>
-    </div>
+          ><i class="fa-brands fa-square-github" title="Github Profile"></i
+        ></a>
+      </div>
+      This website was coded by
+      <a href="https://github.com/shajmin306" target="_blank">Shajmin Rahman</a>
+      and is open-sourced on
+      <a href="https://github.com/shajmin306/Website-Portfolio" target="_blank"
+        >Github</a
+      >
+    </footer>
   </body>
 </html>
