Amended Index page

--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
     <header>
       <div class="hero">
         <h1>Shajmin Rahman</h1>
-        <p class="mb-4">
-          Ladieswear Product Developer & Front-end developer based in
-          Manchester, UK
-        </p>
+        <p class="mb-4">Ladieswear Product Developer based in Manchester, UK</p>
         <a href="./contact.html" class="contact-button mb-4">Contact Me </a>
       </div>
     </header>
