--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <title>Shajmin Rahman Website</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-grey">
+    <nav class="navbar navbar-expand-lg navbar-white">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="/">Shajmin Rahman</a>
+        <a class="navbar-brand text-black" href="/">Shajmin Rahman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a
-              class="nav-link text-white active"
+              class="nav-link text-black active"
               aria-current="page"
               href="/"
               title="Homepage"
@@ -53,19 +53,19 @@
             >
 
             <a
-              class="nav-link text-white"
+              class="nav-link text-black"
               href="./fashion.html"
               title="Fashion Designs"
               >Fashion Design</a
             >
             <a
-              class="nav-link text-white"
+              class="nav-link text-black"
               href="./web.html"
               title="Web Projects"
               >Web Design</a
             >
             <a
-              class="nav-link text-white"
+              class="nav-link text-black"
               href="./contact.html"
               title="Contact Page"
               >Contact</a
