Updated NavBar to include dropdown

--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-grey">
+    <nav class="navbar navbar-expand-lg navbar-white">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="index.html">Shajmin Rahman</a>
+        <a class="navbar-brand text-black" href="index.html">Shajmin Rahman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a
-              class="nav-link text-white active"
+              class="nav-link text-black active"
               aria-current="page"
               href="index.html"
               title="Homepage"
@@ -53,19 +53,40 @@
             >
 
             <a
-              class="nav-link text-white"
+              class="nav-link text-black"
               href="./fashion.html"
               title="Fashion Designs"
               >Fashion Design</a
             >
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-black"
+                data-bs-toggle="dropdown"
+                href="#"
+                role="button"
+                aria-expanded="false"
+                >Web Design</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./WeatherProject.html"
+                    >Weather Project</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./PoemProject.html"
+                    >Poem Generator Project</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./WorldClock.html"
+                    >World Clock Project</a
+                  >
+                </li>
+              </ul>
+            </li>
             <a
-              class="nav-link text-white"
-              href="./web.html"
-              title="Web Projects"
-              >Web Design</a
-            >
-            <a
-              class="nav-link text-white"
+              class="nav-link text-black"
               href="./contact.html"
               title="Contact Page"
               >Contact</a
