--- a/index.html
+++ b/index.html
@@ -58,12 +58,33 @@
               title="Fashion Designs"
               >Fashion Design</a
             >
-            <a
-              class="nav-link text-black"
-              href="./web.html"
-              title="Web Projects"
-              >Web Design</a
-            >
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-black"
+                data-bs-toggle="dropdown"
+                href="#"
+                role="button"
+                aria-expanded="false"
+                >Web Design</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./WeatherProject.html"
+                    >Weather Project</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./PoemProject.html"
+                    >Poem Generator Project</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./WorldClock.html"
+                    >World Clock Project</a
+                  >
+                </li>
+              </ul>
+            </li>
             <a
               class="nav-link text-black"
               href="./contact.html"
@@ -86,9 +107,9 @@
         <div class="row">
           <div class="col-6">
             <p>
-              I have nearly 10 years of experience in the fashion industry. I
-              have a background in Ladieswear design, as well as Merchandising,
-              which has allowed me to transition into a career as a sueccessful
+              I have nearly 10 years of experience in the fashion industry. With
+              a background in Ladieswear design, as well as Merchandising, this
+              has allowed me to transition into a career as a successful
               Ladieswear Product Developer. Check out some of the ranges I have
               worked on in the past 👉🏾
             </p>
