--- a/PoemProject.html
+++ b/PoemProject.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-white">
+      <div class="container-fluid">
+        <a class="navbar-brand text-black" href="/">Shajmin Rahman</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a
+              class="nav-link text-black active"
+              aria-current="page"
+              href="/"
+              title="Homepage"
+              >Home</a
+            >
+
+            <a
+              class="nav-link text-black"
+              href="./fashion.html"
+              title="Fashion Designs"
+              >Fashion Design</a
+            >
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-black"
+                data-bs-toggle="dropdown"
+                href="#"
+                role="button"
+                aria-expanded="false"
+                >Web Design</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./WeatherProject.html"
+                    >Weather Project</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./PoemProject.html"
+                    >Poem Generator Project</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./WorldClock.html"
+                    >World Clock Project</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <a
+              class="nav-link text-black"
+              href="./contact.html"
+              title="Contact Page"
+              >Contact</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
