updated homepage CSS

--- a/index.html
+++ b/index.html
@@ -110,8 +110,12 @@
               I have nearly 10 years of experience in the fashion industry. With
               a background in Ladieswear design, as well as Merchandising, this
               has allowed me to transition into a career as a successful
-              Ladieswear Product Developer. Check out some of the ranges I have
-              worked on in the past 👉🏾
+              Ladieswear Product Developer.</p>
+              <br>
+              <p>Some of the brands I have worked and designed for include Daisy Street, a fast fashion brand, ASOS, Nasty Gal, and Pretty You London, a premium nightwear brand.</p>
+               <br>
+               <p>Check out some of the ranges I have
+              worked on in the past 👉🏾</p>
             </p>
           </div>
           <div class="col-6">
