--- a/PoemProject.html
+++ b/PoemProject.html
@@ -14,6 +14,15 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="/PoemProject.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -84,5 +93,45 @@
         </div>
       </div>
     </nav>
+    <div class="container">
+      <header>
+        <h1>Poem Generator</h1>
+      </header>
+      <main>
+        <div class="form-container">
+          <form id="poem-generator-form">
+            <input
+              type="text"
+              placeholder="Enter the topic of the poem you would like to generate..."
+              autofocus
+              required
+              class="topic-input"
+              id="user-instructions"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <div class="hint">i.e Flower, Paris, love...</div>
+        </div>
+        <div class="poem hidden" id="poem"></div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/shajmin306" target="_blank"
+          >Shajmin Rahman</a
+        >
+        and is open sourced on
+        <a
+          href="https://github.com/shajmin306/Shaz-Poem-Generator"
+          target="_blank"
+        >
+          Github</a
+        >
+        and is hosted on
+        <a href="https://app.netlify.com/sites/mellow-bubblegum-4ad4d2/overview"
+          >Netlify</a
+        >
+      </footer>
+      <script src="/PoemProject.js"></script>
+    </div>
   </body>
 </html>
