Updated Fashion page paragraph

--- a/fashion.html
+++ b/fashion.html
@@ -103,8 +103,12 @@
       <p>
         I am currently working as a product developer at Pretty You London,
         which is a premium nightwear brand based in Manchester. Using the
-        knowledge I have acquired as a designer and merchandiser, I am able to
-        successfully build ranges each season.
+        knowledge I have acquired as a designer and merchandiser, I oversee the
+        design process from concept through to production, working closely with
+        factories and garment technologists to ensure each piece meets high
+        standards of quality and wearability. My responsibilities include trend
+        research, creating mood boards, designing seasonal collections,
+        selecting fabrics and trims, and developing bespoke prints.
       </p>
       <div class="row">
         <div class="col-md-4 d-none d-md-block">
