Updated Fashion page design

--- a/fashion.html
+++ b/fashion.html
@@ -113,28 +113,32 @@
       <div class="row">
         <div class="col-md-4 d-none d-md-block">
           <img
-            src="./IMAGES/PY 2.png"
+            src="./IMAGES/PY1.jpg"
             alt="waffle pj"
-            class="img-fluid rounded"
+            class="img-fluid"
             title="Pretty You Pyjamas"
           />
         </div>
         <div class="col-md-4 d-none d-md-block">
           <img
-            src="./IMAGES/PY 11.png"
+            src="./IMAGES/PY2.jpg"
             alt="bordeaux pj"
-            class="img-fluid rounded"
+            class="img-fluid"
             title="Pretty You Pyjamas"
           />
         </div>
         <div class="col-md-4 d-none d-md-block">
           <img
-            src="./IMAGES/PY 3.png"
+            src="./IMAGES/PY3.jpg"
             alt="green pj"
-            class="img-fluid rounded"
+            class="img-fluid"
             title="Pretty You Pyjamas"
           />
         </div>
+      </div>
+      <div class="moodboards">
+        <img src="/IMAGES/PY BOARD 1.jpg" class="moodboard" />
+        <img src="/IMAGES/PY BOARD 2.jpg" class="moodboard" />
       </div>
       <h2 class="text-center mt-5 mb-5">Daisy Street</h2>
       <p>
