--- a/WorldClock.html
+++ b/WorldClock.html
@@ -9,17 +9,20 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="WorldClock.css" />
     <title>Document</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-white">
       <div class="container-fluid">
-        <a class="navbar-brand text-black" href="/">Shajmin Rahman</a>
+        <a class="navbar-brand text-white" href="/">Shajmin Rahman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a
-              class="nav-link text-black active"
+              class="nav-link text-white active"
               aria-current="page"
               href="/"
               title="Homepage"
@@ -42,14 +45,14 @@
             >
 
             <a
-              class="nav-link text-black"
+              class="nav-link text-white"
               href="./fashion.html"
               title="Fashion Designs"
               >Fashion Design</a
             >
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-black"
+                class="nav-link dropdown-toggle text-white"
                 data-bs-toggle="dropdown"
                 href="#"
                 role="button"
@@ -75,7 +78,7 @@
               </ul>
             </li>
             <a
-              class="nav-link text-black"
+              class="nav-link text-white"
               href="./contact.html"
               title="Contact Page"
               >Contact</a
@@ -84,5 +87,52 @@
         </div>
       </div>
     </nav>
+    <h1>World Clock</h1>
+    <div class="container">
+      <select id="city">
+        <option value="">Select a city...</option>
+        <option value="Current">My current location</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="America/New_York">New York</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+      </select>
+      <div id="cities">
+        <div class="city" id="berlin">
+          <div>
+            <h2>Berlin</h2>
+            <div class="date">11th April 2024</div>
+          </div>
+          <div class="current-time">18:30:23 <small>PM</small></div>
+        </div>
+        <div class="city" id="lisbon">
+          <div>
+            <h2>Lisbon</h2>
+            <div class="date">11th April 2024</div>
+          </div>
+          <div class="current-time">18:30:23 <small>PM</small></div>
+        </div>
+        <div class="city" id="madrid">
+          <div>
+            <h2>Madrid</h2>
+            <div class="date">11th April 2024</div>
+          </div>
+          <div class="current-time">18:30:23 <small>PM</small></div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/shajmin306" target="_blank">Shajmin Rahman</a>
+      and is open sourced on
+      <a href="https://github.com/shajmin306/shaz-world-clock" target="_blank">
+        Github</a
+      >
+      and is hosted on
+      <a
+        href="https://app.netlify.com/projects/profound-biscotti-3ad1df/overview"
+        >Netlify</a
+      >
+    </footer>
+    <script src="/WorldClock.js"></script>
   </body>
 </html>
