Add logos to index page

--- a/index.html
+++ b/index.html
@@ -110,13 +110,16 @@
               I have nearly 10 years of experience in the fashion industry. With
               a background in Ladieswear design, as well as Merchandising, this
               has allowed me to transition into a career as a successful
-              Ladieswear Product Developer.</p>
-              <br>
-              <p>Some of the brands I have worked and designed for include Daisy Street, a fast fashion brand, ASOS, Nasty Gal, and Pretty You London, a premium nightwear brand.</p>
-               <br>
-               <p>Check out some of the ranges I have
-              worked on in the past 👉🏾</p>
+              Ladieswear Product Developer.
             </p>
+            <br />
+            <p>
+              Some of the brands I have worked and designed for include Daisy
+              Street, a fast fashion brand, ASOS, Nasty Gal, and Pretty You
+              London, a premium nightwear brand.
+            </p>
+            <br />
+            <p>Check out some of the ranges I have worked on in the past 👉🏾</p>
           </div>
           <div class="col-6">
             <a href="./fashion.html" class="learn-more">Learn More</a>
@@ -124,6 +127,15 @@
         </div>
       </div>
     </main>
+    <div class="brands">
+      <p>Brands that I have designed for:</p>
+      <div class="logos">
+        <img src="/IMAGES/PY LOGO BLACK.png" alt="" width="150" />
+        <img src="/IMAGES/ASOS LOGO.png" alt="" width="150" />
+        <img src="/IMAGES/DS LOGO.png" alt="" width="200" />
+        <img src="/IMAGES/NG LOGO.png" alt="" width="150" />
+      </div>
+    </div>
     <footer>
       <p class="mb-3">Contact Me</p>
       <div class="social-links d-flex justify-content-center mb-3">
