Made index page responsive

--- a/index.html
+++ b/index.html
@@ -106,14 +106,16 @@
       <div class="main-content">
         <div class="row">
           <div class="col-6">
-            <p>
+            <h2 class="d-none d-md-block">About Me</h2>
+            <p class="d-none d-md-block">
               I have nearly 10 years of experience in the fashion industry. With
-              a background in Ladieswear design, as well as Merchandising, this
-              has allowed me to transition into a career as a successful
-              Ladieswear Product Developer.
+              a background in Ladieswear design, as well as Merchandising, I now
+              work as a successful Ladieswear Product Developer, offering a full
+              end-end service from research and development; CAD ranges and tech
+              packs; to final production into warehouse.
             </p>
             <br />
-            <p>
+            <p class="d-none d-md-block">
               Some of the brands I have worked and designed for include Daisy
               Street, a fast fashion brand, ASOS, Nasty Gal, and Pretty You
               London, a premium nightwear brand.
@@ -127,7 +129,7 @@
         </div>
       </div>
     </main>
-    <div class="brands">
+    <div class="brands d-none d-md-block">
       <p>Brands that I have designed for:</p>
       <div class="logos">
         <img src="/IMAGES/PY LOGO BLACK.png" alt="" width="150" />
