Updated CSS for index/fashion page

--- a/fashion.html
+++ b/fashion.html
@@ -101,14 +101,14 @@
     <div class="content">
       <h2 class="text-center mb-5">Pretty You London</h2>
       <p>
-        I am currently working as a product developer at Pretty You London,
-        which is a premium nightwear brand based in Manchester. Using the
-        knowledge I have acquired as a designer and merchandiser, I oversee the
-        design process from concept through to production, working closely with
-        factories and garment technologists to ensure each piece meets high
-        standards of quality and wearability. My responsibilities include trend
-        research, creating mood boards, designing seasonal collections,
-        selecting fabrics and trims, and developing bespoke prints.
+        I have worked as a product developer at Pretty You London, which is a
+        premium nightwear brand based in Manchester. Using the knowledge I have
+        acquired as a designer and merchandiser, I oversee the design process
+        from concept through to production, working closely with factories and
+        garment technologists to ensure each piece meets high standards of
+        quality and wearability. My responsibilities include trend research,
+        creating mood boards, designing seasonal collections, selecting fabrics
+        and trims, and developing bespoke prints.
       </p>
       <div class="row">
         <div class="col-md-4 d-none d-md-block">
@@ -136,7 +136,7 @@
           />
         </div>
       </div>
-      <div class="moodboards">
+      <div class="moodboards d-none d-md-block">
         <img src="/IMAGES/PY BOARD 1.jpg" class="moodboard" />
         <img src="/IMAGES/PY BOARD 2.jpg" class="moodboard" />
       </div>
@@ -153,7 +153,7 @@
           <img
             src="./IMAGES/DS 1.png"
             alt="printed dress"
-            class="img-fluid rounded"
+            class="img-fluid"
             title="Daisy Street Dress"
           />
         </div>
@@ -161,7 +161,7 @@
           <img
             src="./IMAGES/DS 4.png"
             alt="red sweatshirt"
-            class="img-fluid rounded"
+            class="img-fluid"
             title="Daisy Street Sweatshirt"
           />
         </div>
@@ -169,7 +169,7 @@
           <img
             src="./IMAGES/DS 2.png"
             alt="green sweatshirt"
-            class="img-fluid rounded"
+            class="img-fluid"
             title="Daisy Street Sweatshirt"
           />
         </div>
